# creditdefapi

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  NEXTPROMPT.txt  README.md  README_Backupcopy.md  RUNBOOK.md  api.py  batch.py  compose.yaml  config.yaml  evaluate_locked.py  evaluate_profit_locked.py  evaluation.py  formatt.txt  preprocessing.py  pyproject.toml  requirements.txt  train.py  train_profit.py  train_rejected_style.py
docs/: accepted_model_card.json  audit_gate.md  limited_field_model_card.json
frontend/: index.html
reports/: accepted_validation_metrics.json  bootstrap_intervals.csv  calibration_deciles.csv  calibration_table.csv  cohort_backtest.csv  decile_lift.csv  direct_profit_locked_test_deciles_smoke.csv  direct_profit_locked_test_metrics_smoke.json  direct_profit_validation_deciles.csv  direct_profit_validation_metrics.json  evaluation_summary.json  fairness_caveat.md  feature_importance.csv  locked_test_metrics.json  locked_test_metrics_smoke.json  model_card.md  model_comparison.csv  non_test_label_counts_by_split_year.csv  policy_summary.csv  policy_threshold_curve.csv  profit_policy_comparison_locked_test_smoke.json  profit_policy_comparison_validation.json  rejected_style_validation_metrics.json  sensitivity_summary.csv  top_percentile_curve.csv
scripts/: generate_demo_artifacts.py
src/: __init__.py  artifacts.py  calibration.py  config.py  evaluation.py  evaluation_report.py  models.py  preprocessing.py  profit.py  profit_challenger.py  reporting.py  schemas.py  scorer.py  train.py
tests/: test_api.py  test_calibration.py  (+8 more)
(+39 files in other folders)
